# proximitycast

./: .gitignore  README.md  pubspec.yaml
android/: .gitignore
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/vadhub/proximity_app/: MainActivity.kt
lib/: ffi_bridge.dart  main.dart
lib/components/: broadcast.dart  chat.dart  debug.dart  drawer.dart
lib/models/: chat.dart  chat_screen_arguments.dart  distance_result.dart  key_pair.dart  location_ciphertexts.dart  peer_state.dart  profile.dart  server_state.dart
lib/state/: chats.dart  conn_data_manager.dart  dio.dart  ffi_bridge.dart  key_manager.dart  location.dart  location_ciphertexts.dart  peer.dart  profiles.dart  server_state.dart  user_profile.dart
server/: index.js  package-lock.json
src/: combined.cpp  coords.cpp  coords.h  crypto_functions.cpp  crypto_functions.h
src/UTM/: UTM.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
